<resources>
    <string name="app_name">Shopping List</string>
    <string name="add_item">Add Item</string>
    <string name="cheese">Cheese</string>
    <string name="rice">Rice</string>
    <string name="apples">Apples</string>
    <string name="milk">Milk</string>
    <string name="eggs">Eggs</string>
    <string name="bread">Bread</string>
    <string name="coffee">Coffee</string>
    <string name="butter">Butter</string>
    <string name="chips">Chips</string>
    <string name="bananas">Bananas</string>
</resources>